--- a/portfolio-site/src/components/Navbar.css
+++ b/portfolio-site/src/components/Navbar.css
@@ -4,6 +4,8 @@
     top:0;
     position: sticky;
     transition: 0.5s;
+
+    /*Set a massivley high z-index so that the navbar never gets covered when using react-reveal*/
 }
 .bar.scrolled{
     /* background-color: #03045E; */
@@ -42,6 +44,7 @@ li{
     width:100%;
     height:100vh;
     background-color:#03045E;
+    position:fixed;
 }
 
 .mobileNavLinks ul{
@@ -70,6 +73,8 @@ li{
 }
 .mobileNavUlOpen{
     background-color: #03045E;
+    transition-duration:.5s;
+    transition-delay: .2s;
 }
 
 /*Responsive stuff*/
